[gd_scene load_steps=4 format=3 uid="uid://bcks0khtkwbbh"]

[ext_resource type="Script" path="res://Dragon Game Template/Menues/Pause Menu/Desktop Confirm/desktop_page.gd" id="1_aytao"]

[sub_resource type="InputEventAction" id="InputEventAction_is5nq"]
action = &"Backspace"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_drstl"]
events = [SubResource("InputEventAction_is5nq")]

[node name="DesktopConfirm" type="MarginContainer"]
custom_minimum_size = Vector2(128, 128)
anchors_preset = -1
anchor_right = 0.488281
anchor_bottom = 0.868056
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_aytao")
metadata/_edit_use_anchors_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
follow_focus = true

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
alignment = 1

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "key_desktop_confirm"
horizontal_alignment = 1

[node name="NoButton" type="Button" parent="ScrollContainer/VBoxContainer" node_paths=PackedStringArray("shortcut_context")]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
shortcut_context = NodePath("../../..")
shortcut = SubResource("Shortcut_drstl")
text = "key_no"

[node name="YesButton" type="Button" parent="ScrollContainer/VBoxContainer" node_paths=PackedStringArray("shortcut_context")]
layout_mode = 2
mouse_default_cursor_shape = 2
shortcut_context = NodePath("../../..")
text = "key_yes"

[connection signal="pressed" from="ScrollContainer/VBoxContainer/NoButton" to="." method="_on_no_button_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/YesButton" to="." method="_on_yes_button_pressed"]
